--- a/farmer.html
+++ b/farmer.html
@@ -23,11 +23,11 @@
 <hr>
 <a href="https://www.youtube.com/watch?v=UjIiVXZb4is"><h3>The story</h3></a>
 <p>
-  Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q class ="neighbors">We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said, <q class="farmer">Maybe.<q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q class ="neighbors">Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said,<q class="farmer">Maybe.</q>
+  Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q class ="neighbors">We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said, <q class="farmer"><em>Maybe</em>.</q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q class ="neighbors">Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said,<q class="farmer"><em>Maybe</em>.</q>
 </p>
 
 <p>
-  The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, <q class ="neighbors">Oh dear, that’s too <span class="cap" id="bad">bad</span>.</q> and the farmer responded, <qclass="farmer">Maybe.</q> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q class ="neighbors"> Isn’t that great!</q> Again, he said, <q class="farmer">Maybe.</q>
+  The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, <q class ="neighbors">Oh dear, that’s too <span class="cap" id="bad">bad</span>.</q> and the farmer responded, <qclass="farmer"><em>Maybe</em>.</q> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q class ="neighbors"> Isn’t that great!</q> Again, he said, <q class="farmer"><em>Maybe</em>.</q>
 </p>
 
 <quote cite="https://en.wikipedia.org/wiki/Alan_Watts">The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad— because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune. - Alan Watts
